--- a/index.html
+++ b/index.html
@@ -1,1 +1,47 @@
-Hello AlexKyuu
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" href="favicon.ico" type="image/x-icon"/>
+  <title>Alex Kyuu</title>
+  <style>
+    html, body {
+      background-color: #fff;
+      color: #636b6f;
+      font-family: 'Raleway', sans-serif;
+      font-weight: 100;
+      height: 100vh;
+      margin: 0;
+      padding: 0;
+    }
+    .full-height {
+      height: 100vh;
+    }
+    .flex-center {
+      align-items: center;
+      display: flex;
+      justify-content: center;
+    }
+    .position-ref {
+      position: relative;
+    }
+    .content {
+      text-align: center;
+    }
+    .title {
+      font-size: 84px;
+    }
+  </style>
+</head>
+<body>
+<div class="flex-center position-ref full-height">
+  <div class="content">
+    <div class="title m-b-md">
+      Coming soon...
+    </div>
+  </div>
+</div>
+</body>
+</html>
